tests/NormalTests/paczka1/small_fuzzy/71903227.err
Error in line 2: GLWMX8cZJz S400 88,7
Error in line 10: S4 S4 13,7
Error in line 14: S4 S400 87,2
